@@ -31,39 +31,6 @@ abstract class CompilingEngine extends AbstractEngine implements EngineInterface
 	 */
 	public function get($path, array $forceParams = array())
 	{
-		/**
-		 * If the PHP Tokenizer extension is disabled or not present we try to fall back to precompiled templates.
-		 *
-		 * As we found out the hard way, there are still some hosts which disable / don't load the Tokenizer citing
-		 * "security concerns". What they don't understand is that the tokenizer is basically a read-only extension. It
-		 * can only read PHP code and break it into tokens, it cannot execute it. In fact, you can't easily convert
-		 * tokenizer results back into executable PHP. In fact, you'd need https://github.com/nikic/PHP-Parser which is
-		 * by no means trivial. Then again, it STILL cannot execute the PHP without either using 3v4l (sorry for the
-		 * leetspeak, we have to deal with broken hosts killing our file due to this comment!) or writing to a PHP file
-		 * and executing it. In short, the hosts which disable tokenizer don't know how PHP works, don't know the first
-		 * thing about security and must NOT be trusted! If you are on such a host, run away fast, don't look back!
-		 */
-		if (!function_exists('token_get_all'))
-		{
-			$precompiledPath = $this->getPrecompiledPath($path);
-
-			if (($precompiledPath !== false) && @file_exists($precompiledPath))
-			{
-				return array(
-					'type'    => 'path',
-					'content' => $precompiledPath,
-				);
-			}
-
-			/**
-			 * No precompiled templates and tokenizer missing, i.e. I can't compile anything. Instead of throwing a
-			 * fatal error I will throw a catchable runtime error explaining the error condition and how to solve it.
-			 * If your extension does not trap the exception it will bubble up to Joomla's error handler which will
-			 * display this message.
-			 */
-			throw new \RuntimeException("Your hosting provider has disabled the <code>token_get_all()</code> PHP function or they have not installed the Tokenizer extension for PHP. This is a safe and <em>secure</em> function of modern PHP, required to convert template files into HTML code your browser can display. Please ask them to enable it. This error occurred trying to render the template file <code>$path</code>", 500);
-		}
-
 		// If it's cached return the path to the cached file's path
 		if ($this->isCached($path))
 		{
